--- a/sponsorship.html
+++ b/sponsorship.html
@@ -49,10 +49,10 @@
                 </div></div>
             <div class="col-xs-4" data-toggel="person-3">
                 <div class="person-img">
-                    <img class="img-responsive" src="images/question.png" alt="person 3" />
+                    <img class="img-responsive" src="http://www.prestige.bg/images/cover-pix.jpg" alt="person 3" />
                 </div>
                 <div class="person-data">
-                    <p>Име: <strong></strong></p>
+                    <p>Име: <strong>Езикова школа "Престиж"</strong></p>
                 </div>
             </div>
         </div>
@@ -73,52 +73,55 @@
                 </p>
             </div>
             <div id="person-3" class="col-xs-12">
-                <p></p>
+                <p>В ПРЕСТИЖ на ваше разположение е функционална материална база: модерно оборудвани и климатизирани учебни и компютърни зали, приветлив офис, приятни зони за почивка и free bar.
+
+                    Залите са оборудвани с най-новите технически средства за обучение и мултимедията е ваш постоянен помощник в учебните занятия. В тези условия ученето е и по-интересно, и по-лесно, и по-резултатно. За повече информация кликнете <a href="http://www.prestige.bg/" target="_blank">тук</a>.
+                </p>
             </div>
         </div>
 
         <hr class="col-sm-12 text-center">
 
-        <div class="row">
-            <div class="col-xs-4" data-toggel="person-4">
-                <div class="person-img">
-                    <img class="img-responsive" src="images/question.png" alt="person 4" />
-                </div>
-                <div class="person-data">
-                    <p>Име: <strong></strong></p>
-                </div>
-            </div>
-            <div class="col-xs-4" data-toggel="person-5">
-                <div class="person-img">
-                    <img class="img-responsive" src="images/question.png" alt="person 5" />
-                </div>
-                <div class="person-data">
-                    <p>Име: <strong></strong></p>
-                </div>
-            </div>
-            <div class="col-xs-4" data-toggel="person-6">
-                <div class="person-img">
-                    <img class="img-responsive" src="images/question.png" alt="person 6" />
-                </div>
-                <div class="person-data">
-                    <p>Име: <strong></strong></p>
-                </div>
-            </div>
-        </div>
+        <!--<div class="row">-->
+            <!--<div class="col-xs-4" data-toggel="person-4">-->
+                <!--<div class="person-img">-->
+                    <!--<img class="img-responsive" src="images/question.png" alt="person 4" />-->
+                <!--</div>-->
+                <!--<div class="person-data">-->
+                    <!--<p>Име: <strong></strong></p>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-xs-4" data-toggel="person-5">-->
+                <!--<div class="person-img">-->
+                    <!--<img class="img-responsive" src="images/question.png" alt="person 5" />-->
+                <!--</div>-->
+                <!--<div class="person-data">-->
+                    <!--<p>Име: <strong></strong></p>-->
+                <!--</div>-->
+            <!--</div>-->
+            <!--<div class="col-xs-4" data-toggel="person-6">-->
+                <!--<div class="person-img">-->
+                    <!--<img class="img-responsive" src="images/question.png" alt="person 6" />-->
+                <!--</div>-->
+                <!--<div class="person-data">-->
+                    <!--<p>Име: <strong></strong></p>-->
+                <!--</div>-->
+            <!--</div>-->
+        <!--</div>-->
 
-        <hr class="col-sm-12 text-center hidden-hr">
+        <!--<hr class="col-sm-12 text-center hidden-hr">-->
 
-        <div class="row">
-            <div id="person-4" class="col-xs-12">
-                <p></p>
-            </div>
-            <div id="person-5" class="col-xs-12">
-                <p></p>
-            </div>
-            <div id="person-6" class="col-xs-12">
-                <p></p>
-            </div>
-        </div>
+        <!--<div class="row">-->
+            <!--<div id="person-4" class="col-xs-12">-->
+                <!--<p></p>-->
+            <!--</div>-->
+            <!--<div id="person-5" class="col-xs-12">-->
+                <!--<p></p>-->
+            <!--</div>-->
+            <!--<div id="person-6" class="col-xs-12">-->
+                <!--<p></p>-->
+            <!--</div>-->
+        <!--</div>-->
 
     </article>
 
